--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 html,
 body {
-  height: 100%;
+  height: 100dvh;
 }
 
 * {
-  font-family: "Ubuntu mono", monospace;
+  font-family: "Poppins", monospace;
 }
 
 body {
@@ -19,21 +19,60 @@ body {
   color: #fff;
 }
 
-button {
-  background-color: #03f934;
-  color: #ddd;
-  padding: 0 45px;
-  border: 3px solid #039e22;
-  border-radius: 25px;
-  height: 50px;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 1.5em;
-  cursor: pointer;
-  transition: 0.4s;
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  button {
+    background-color: #2db12d;
+    color: #ddd;
+    padding: 0 45px;
+    border: none;
+    border-radius: 25px;
+    height: 35px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1em;
+    cursor: pointer;
+    transition: 0.4s;
+  }
 }
 
-button:hover {
-  background-color: #059c23;
-  color: #ccc;
+@media only screen and (min-width: 768px) and (max-width: 1280px) {
+  button {
+    background-color: #2db12d;
+    color: #ddd;
+    padding: 0 35px;
+    border: none;
+    border-radius: 25px;
+    height: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.5em;
+    cursor: pointer;
+    transition: 0.4s;
+  }
+
+  button:hover {
+    background-color: rgb(3, 128, 28);
+    color: #ddd;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  button {
+    background-color: #2db12d;
+    color: #ddd;
+    padding: 0 45px;
+    border: none;
+    border-radius: 25px;
+    height: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.5em;
+    cursor: pointer;
+    transition: 0.4s;
+  }
+
+  button:hover {
+    background-color: rgb(3, 128, 28);
+    color: #ddd;
+  }
 }
